# DeWebStatus

./: README.md
backend/: .gitignore  Cargo.toml
backend/crates/api/: Cargo.toml
backend/crates/api/src/: auth.rs  lib.rs  main.rs  models.rs  routes.rs
backend/crates/config/src/: lib.rs
backend/crates/db/: Cargo.toml
backend/crates/db/migrations/: 20250425180358_create_users.sql  20250426112122_website_user_validator.sql
backend/crates/db/src/: connection.rs  main.rs
backend/crates/hubs/: Cargo.toml
backend/crates/validators/: Cargo.toml
backend/main/: Cargo.toml
backend/main/src/: main.rs
frontend/: config.ts  middleware.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: Appbar.tsx  HomePage.tsx  theme-toggle.tsx
frontend/components/auth/: auth-card.tsx  auth-header.tsx  password-strength.tsx  protected-route.tsx
frontend/components/hooks/: useWebsites.tsx
frontend/components/layout/: Footer.tsx  Header.tsx
frontend/components/sections/: Features.tsx  Hero.tsx  Pricing.tsx  Testimonials.tsx
frontend/lib/: auth.ts  motion.tsx
hub/: index.ts  package-lock.json  package.json
validator/: index.ts  package-lock.json  package.json  types.ts
