[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
jsonwebtoken = "9.2.0"  # Or latest
serde = { version = "1.0.197", features = ["derive"] }
axum = "0.7.4"        # (if using axum)
tokio = { version = "1.44.2", features = ["full"] }
dotenvy = "0.15"
serde_json = "1.0.114"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros", "uuid"] }
uuid = { version = "1", features = ["serde", "v4"] }